birina be changes

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon",
     "start": "ts-node src/index.ts",
-    "build": "pnpm build"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
